# hanoi-crossing-engine

./: .pre-commit-config.yaml  README.md  pyproject.toml
docs/: TRD.md  submission.md
examples/: draw_skip_only.json  illegal_moves_valid_replay.json  n1_a_wins.json  n2_b_wins.json  n3_a_wins_optimal.json  trapping_a_traps_b_disk4.json  trapping_b_traps_a.json
src/hanoi/engine/: __init__.py  actions.py  config.py  engine.py  observation.py  rules.py  serialization.py  state.py
src/hanoi/modes/: __init__.py  _agent.py  random_play.py  replay.py
tests/: conftest.py  test_config.py  test_end_to_end.py  test_engine.py  test_observation.py  test_random_play.py  test_replay.py  test_rules.py  test_serialization.py
