[project]
name = "hanoi-crossing-engine"
version = "0.1.0"
description = "Deterministic, fully-testable game engine for Hanoi Crossing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hanoi-replay = "hanoi.modes.replay:main"
hanoi-random = "hanoi.modes.random_play:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hanoi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
