[project]
name = "hanoi-crossing-engine"
version = "0.1.0"
description = "Deterministic, fully-testable game engine for Hanoi Crossing."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
hanoi-replay = "hanoi.modes.replay:main"
hanoi-random = "hanoi.modes.random_play:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hanoi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
]
